fix: RacingGameService 수정